<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingHorizontal="@dimen/mlogin_padding_horizontal">
    <EditText
        android:id="@+id/et_userName_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mlogin_username_input_hint"
        />
    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mlogin_password_input_hint"
        /><EditText
        android:id="@+id/et_repassword_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mlogin_repassword_input_hint"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mlogin_register"/>
</LinearLayout>