<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/mlogin_padding_horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mlogin_username_hint"
            android:paddingHorizontal="10dp"
            android:lines="1"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mlogin_password_hint"
            android:paddingHorizontal="10dp"
            android:lines="1"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mlogin_login" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:gravity="center_horizontal"
            android:textColor="#999999"
            android:textStyle="bold|italic"
            android:text="or"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mlogin_register"/>
    </LinearLayout>
</FrameLayout>